<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="350dp"
    android:layout_height="wrap_content"
    android:background="#7000ff"
    android:orientation="vertical"
    android:paddingLeft="21dp"
    android:paddingRight="21dp"
    android:paddingBottom="11dp">

    <TextView
        android:id="@+id/dialogTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="21dp"
        android:gravity="center"
        android:text="@string/Add_Link"
        android:textColor="#fff"
        android:textSize="32sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/linkName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/Enter_Link_Name"
        android:inputType="textCapCharacters"
        android:padding="11dp"
        android:shadowColor="#000"
        android:textColor="#fff"
        android:textColorHint="#fff"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/link"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/Enter_Link"
        android:inputType="textUri"
        android:padding="11dp"
        android:textColor="#fff"
        android:textColorHint="#fff"
        android:importantForAutofill="no" />

    <Button
        android:id="@+id/addLink"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#fff"
        android:text="@string/Add_Link"
        android:textColor="#7000ff"
        android:layout_gravity="center"/>

</LinearLayout>